--- a/js/与浏览器相关.md
+++ b/js/与浏览器相关.md
@@ -1,11 +1,17 @@
 ### 1.阻止浏览器返回
 
-/```
+```
 history.pushState(null, null, document.URL);
 window.addEventListener("popstate", function() {
 history.pushState(null, null, document.URL);
 });
 
-```/
+```
 
+### 2.ie 里 iframe 空白
+
+```
+iframeID 是加载的 Iframe ID号，修改成自己用的即可。
+<iframe name="frames" id="iframeID" src=""/>
+setTimeout("document.frames['"+iframeID+"'].location.href='"+iurls+"';",0);
 ```
