--- a/js/数据类型.md
+++ b/js/数据类型.md
@@ -1,11 +1,31 @@
-####1.字符串一旦被创建，其值将不能改变，如果改变必须销毁原有字符串  
-####2.Js 判断空对象的几种方法  
+#### 1.字符串一旦被创建，其值将不能改变，如果改变必须销毁原有字符串
+
+#### 2.Js 判断空对象的几种方法
+
 `var obj = {}`;  
 转化成 Json 字符串:`console.log(JSON.stringify(obj)==="{}");`  
 利用 Es6 遍历对象的属性： Object.keys(obj):`console.log(Object.keys(obj).length===0);`  
 利用 Es6 遍历对象的属性：Object.getOwnPropertyNames(obj):`console.log(Object.getOwnPropertyNames(obj).length===0)`  
 利用 Es6 遍历对象的属性：Reflect.ownKeys(obj):`console.log(Reflect.ownKeys(obj).length===0)`  
 jQuery 源码里判断空对象：for ... in:
-`function isEmptyObject(){ var name; for (name in obj) { return false; } return true; } console.log(isEmptyObject(obj));`  
-####2.对象删除属性：  
+`function isEmptyObject(){ var name; for (name in obj) { return false; } return true; } console.log(isEmptyObject(obj));`
+
+#### 3.对象删除属性：
+
 `delete a.age;`
+
+### 4.==判断规则
+
+```
+如果 Type(x)和 Type(y)相同，返回 x===y 的结果
+如果 Type(x)和 Type(y)不同
+如果 x 是 null，y 是 undefined，返回 true
+如果 x 是 undefined，y 是 null，返回 true
+如果 Type(x)是 Number，Type(y)是 String，返回 x==ToNumber(y) 的结果
+如果 Type(x)是 String，Type(y)是 Number，返回 ToNumber(x)==y 的结果
+如果 Type(x)是 Boolean，返回 ToNumber(x)==y 的结果
+如果 Type(y)是 Boolean，返回 x==ToNumber(y) 的结果
+如果 Type(x)是 String 或 Number 或 Symbol 中的一种并且 Type(y)是 Object，返回 x==ToPrimitive(y) 的结果
+如果 Type(x)是 Object 并且 Type(y)是 String 或 Number 或 Symbol 中的一种，返回 ToPrimitive(x)==y 的结果
+其他返回 false
+```
