--- a/js/对象.md
+++ b/js/对象.md
@@ -1,5 +1,6 @@
-###1.Object.create(prototype, descriptors)
-** 参数 **
+### 1.Object.create(prototype, descriptors)
+
+**参数**
 prototype
 必需。 要用作原型的对象。 可以为 null。
 
@@ -8,7 +9,7 @@ descriptors
 
 “数据属性”是可获取且可设置值的属性。 数据属性描述符包含 value 特性，以及 writable、enumerable 和 configurable 特性。 如果未指定最后三个特性，则它们默认为 false。 只要检索或设置该值，“访问器属性”就会调用用户提供的函数。 访问器属性描述符包含 set 特性和/或 get 特性。 有关详细信息，请参阅 Object.defineProperty 函数 (JavaScript)。
 
-** 异常 **
+**异常**
 如果满足下列任一条件，则将引发 TypeError 异常：
 
 prototype 参数不是对象且不为 null。
@@ -18,3 +19,17 @@ descriptors 参数中的描述符具有 value 或 writable 特性，并具有 ge
 descriptors 参数中的描述符具有不为函数的 get 或 set 特性。
 
 ### 2.javaScript 中的 Object.defineProperty()和 defineProperties()
+
+Object 的 defineProperty 和 defineProperties 这两个方法在 js 中的重要性十分重要，主要功能就是用来定义或修改这些内部属性,与之相对应的 getOwnPropertyDescriptor 和 getOwnPropertyDescriptors 就是获取这行内部属性的描述。
+
+### 3.js 对象属性 通过点(.) 和 方括号([]) 的不同之处
+
+1、点操作符: 静态的。右侧必须是一个以属性名称命名的简单标识符。属性名用一个标识符来表示。标识符必须直接出现再 js 程序中，
+它们不是数据类型，因此程序无法修改它们。
+2、中括号操作符: 动态的。方括号里必须是一个计算结果为字符串的表达式，属性名通过字符串表示。字符串是 js 的数据类型，
+再程序运行时可以修改和创建它们。
+**区别**  
+1、[]--可以用变量作为属性名或访问,而点方法不可以;  
+2、[]中括号法--可以用数字作为属性名,而点语法不可以;  
+3, [] 可以动态访问的属性名，可以在程序运行时创建和修改属性，点操作符就不行！
+4,如果属性名中包含会导致语法错误的字符，或者属性名是关键字或者保留字，也可以使用方括号表示法。
