--- a/js/数组.md
+++ b/js/数组.md
@@ -4,3 +4,24 @@
 
 some 一直在找符合条件的值，一旦找到，则不会继续迭代下去。
 every 从迭代开始，一旦有一个不符合条件，则不会继续迭代下去。
+
+### 3.JS 中 slice,splice,split 的区别
+
+**_ 1.slice ： _**  
+　　 定义：接收一个或两个参数，它可以创建一个由当前数组中的一项或多项组成的新数组，注意是新数组哦~ 也就是说它不会修改原来数组的值。
+
+用法：slice( para1 ),会截取从 para1 开始的到原数组最后的部分；
+
+slice（para1,para2）会截取原数组的从 para1 开始的 para2-para1 个数组。
+
+注意：当两个参数中存在负数时，用原数组的长度加上两个负数的参数作为相应的参数来计算。
+
+**_ 2. splice : _**
+
+定义：强大的数组操作方法
+
+用法 ： splice( para1,para2 ) : 删除数组中任意数量的项，从 para1 开始的 para2 项。注意的是用 splice 删除数组中的值会直接将某几项从数组中完全删除，会导致数组 length 值的改变，这与 delete 的删除置为 undefined 是不一样的。
+
+splice( para1,para2,val1,val2… )：项数组中添加和删除项，para1 表示可以添加的项数，para2 表示删除的项数，后面的变量表示要添加的项的值，注 意是从 para1 之后开始删除和添加的。
+
+注意 ： 参数为负数的问题，如果 para1 为负数，则会加上数组的长度作为 para1 的值，而 para2 为负数或 0 的话不会执行删除操作。
