--- a/js/与浏览器相关.md
+++ b/js/与浏览器相关.md
@@ -15,3 +15,33 @@ iframeID 是加载的 Iframe ID号，修改成自己用的即可。
 <iframe name="frames" id="iframeID" src=""/>
 setTimeout("document.frames['"+iframeID+"'].location.href='"+iurls+"';",0);
 ```
+
+### 3.history
+
+**_ 1) window.history.pushState(stateObject,title,url ) _**
+
+```
+将当前URL和history.state加入到history中，并用新的state和URL替换当前，不会造成页面刷新。
+
+--参数解释
+stateObject    //与要跳转到的URL对应的状态信息，没有特殊的情况下可以直接传{}
+title       //现在大多数浏览器不支持或者忽略这个参数，我们在用的时候建议传一个空字符串
+url            //这个参数提供了新历史纪录的地址,它不一定要是绝对地址，也可以是相对的，不可跨域
+```
+
+**_ 2) window.history.replaceState(stateObject,title,url) _**
+
+```
+用新的state和URL替换当前，不会造成页面刷新。
+
+--参数解释
+stateObject    //与要跳转到的URL对应的状态信息，没有特殊的情况下可以直接传{}
+title       //现在大多数浏览器不支持或者忽略这个参数，我们在用的时候建议传一个空字符串
+url            //这个参数提供了新历史纪录的地址,它不一定要是绝对地址，也可以是相对的，不可跨域
+```
+
+**_ 两者区别：pushState 会改变 history.length，而 replaceState 不改变 history.length _**
+
+### 4.监听浏览器状态（popstate）变化事件
+
+可以理解为监听浏览器后退、前进的操作，只要后退或者前进就会触发。
