--- a/js/与浏览器相关.md
+++ b/js/与浏览器相关.md
@@ -18,7 +18,7 @@ setTimeout("document.frames['"+iframeID+"'].location.href='"+iurls+"';",0);
 
 ### 3.history
 
-**_ 1) window.history.pushState(stateObject,title,url ) _**
+**1 window.history.pushState(stateObject,title,url )**
 
 ```
 将当前URL和history.state加入到history中，并用新的state和URL替换当前，不会造成页面刷新。
@@ -29,7 +29,7 @@ title       //现在大多数浏览器不支持或者忽略这个参数，我们
 url            //这个参数提供了新历史纪录的地址,它不一定要是绝对地址，也可以是相对的，不可跨域
 ```
 
-**_ 2) window.history.replaceState(stateObject,title,url) _**
+**2 window.history.replaceState(stateObject,title,url)**
 
 ```
 用新的state和URL替换当前，不会造成页面刷新。
@@ -40,7 +40,7 @@ title       //现在大多数浏览器不支持或者忽略这个参数，我们
 url            //这个参数提供了新历史纪录的地址,它不一定要是绝对地址，也可以是相对的，不可跨域
 ```
 
-**_ 两者区别：pushState 会改变 history.length，而 replaceState 不改变 history.length _**
+**两者区别：pushState 会改变 history.length，而 replaceState 不改变 history.length**
 
 ### 4.监听浏览器状态（popstate）变化事件
 
