--- a/css/css世界/1，2，3章.md
+++ b/css/css世界/1，2，3章.md
@@ -12,7 +12,7 @@
 2. width/height 作用在哪个盒子上：是内在盒子，也就是“容器盒子”。
 3. width:min-content/max-content/fit-content 元素宽度由内容决定
 4. 无宽度准则：display：block 不设置 width 默认 100%
-5. 按钮换行规则：<button>标签按钮才会自动换行，<input>标签按钮，默认 white-space:pre，是不会换行的，需要将 pre 值重置为默认的 normal。
+5. 按钮换行规则：button 标签按钮才会自动换行，input 标签按钮，默认 white-space:pre，是不会换行的，需要将 pre 值重置为默认的 normal。
 6. 请看这个需求：页面某个模块的文字内容是动态的，可能是几个字，也可能是一句话。然后，希望文字少的时候居中显示，文字超过一行的时候居左显示。该如何实现？
 
 ```
@@ -29,4 +29,37 @@ text-align: left;
 
 **2.height**
 
-1. 11
+1. 浏览器先渲染父元素，后渲染子元素，当渲染到父元素的时候，子元素的
+   width:100%并没有渲染，宽度就是图片加文字内容的宽度；等渲染到文字这个子元素的时候，父元素宽度已经固定，此时的 width:100%就是已经固定好的父元素的宽度。宽度不够怎么办？溢出就好了，overflow 属性就是为此而生的。
+2. 让元素支持 height：100%
+
+```
+//1.设置显式的高度值
+html,body {
+    height:100%;
+}
+//2.使用绝对定位
+div {
+    height:100%;
+    position:absolute;
+}
+
+```
+
+**备注：**  
+绝对定位的宽高百分比计算是相对于 padding box 的，也就是说会把 padding 大小值计算在内，但是，非绝对定位元素则是相对于 content box 计算的。
+
+**3.CSS min-width/max-width 和 min-height/max-height**
+
+1. 为了避免图片在移动端展示过大：
+
+```
+img {
+    max-width:100%;
+    height:auto!important;
+}
+```
+
+2. min-width/min-height 初始值是 auto，max-width/max-height 初始值是 none.
+3. max-width 会覆盖 width!important，min-wdith 和 max-width 冲突的时候 min-wdith 覆盖 max-width
+4.
