--- a/css/css世界/第4章盒尺寸四大家族.md
+++ b/css/css世界/第4章盒尺寸四大家族.md
@@ -1,1 +1,47 @@
-### 一.
+### 一.content
+
+**1.content 与替换元素**
+
+1. 通过修改某个属性值呈现的内容可以被替换的元素称为“替换元素”：img object video iframe textarea input 等
+   特性:
+
+- 内容的外观不受页面上的 CSS 的影响
+- 有自己的尺寸
+- 在很多 CSS 属性上有自己的一套表现规则
+
+2. input 和 button 按钮的区别在什么地方？区别在于两种按钮默认的 white-space 值不一样，前者是 pre，后者是 normal，所表示出来的现象差异就是：当按钮文字足够多的时候，input 按钮不会自动换行，button 按钮则会。
+
+3. 替换元素的尺寸计算规则：固有尺寸，HTML 尺寸和 CSS 尺寸
+
+- 固有尺寸指的是替换内容原本的尺寸
+- “HTML 尺寸”只能通过 HTML 原生属性改变，这些 HTML 原生属性包括 img 的 width 和 height 属性、input 的 size 属性、textarea 的 cols 和 rows 属性等
+- CSS 尺寸特指可以通过 CSS 的 width 和 height 或者 max-width/min-width 和 max-height/min-height 设置的尺寸，对应盒尺寸中的 content box
+
+**计算规则**
+
+- 如果没有 CSS 尺寸和 HTML 尺寸，则使用固有尺寸作为最终的宽高
+- 如果没有 CSS 尺寸，则使用 HTML 尺寸作为最终的宽高
+- 如果有 CSS 尺寸，则最终尺寸由 CSS 属性决定
+- 如果“固有尺寸”含有固有的宽高比例，同时仅设置了宽度或仅设置了高度，则元素依然按照固有的宽高比例显示
+- 如果上面的条件都不符合，则最终宽度表现为 300 像素，高度为 150 像素，宽高比 2:1
+- 内联替换元素和块级替换元素使用上面同一套尺寸计算规则，因此，图片呈现的宽高还是 256 像素 ×192 像素。这也是为何图片以及其他表单类替换元素设置 display:block 宽度却没有 100%容器的原因
+
+4. 因为图片中的 content 替换内容默认的适配方式是填充（fill），
+   也就是外部设定的尺寸多大，我就填满、跟着一样大。换句话说，尺寸变化的本质并不是改变固有尺寸，而是采用了填充作为适配 HTML 尺寸和 CSS 尺寸的方式，且在 CSS3 之前，此适配方式是不能修改的。  
+   在 CSS3 新世界中，img 和其他一些替换元素的替换内容的适配方式可以通过 object-fit 属性修改了。例如，img 元素的默认声明是 object-fit:fill，如果我们设置 object-fit:none，则我们图片的尺寸就完全不受控制，表现会和非替换元素::before 生成的图片尺寸类似；如果我们设置 object-fit:contain，则图片会以保持比例图片，尽
+   可能利用 HTML 尺寸但又不会超出的方式显示，有些类似于 background-size:contain 的呈现原理，如果此时我们设定 img 元素的 width 和 height 都是 200 像素，则会呈现图 4-6 所示的自动垂直居中效果。
+
+5. chrome 浏览器 img alt 不为空 display:block 则宽度为 100%。
+6. 如果图片原来是有 src 地址的，我们也是可以使用 content 属性把
+   图片内容给置换掉的,，content 属性改变的仅仅是视觉呈现，当我们以右键或其他形式保存这张图片的时候，所保存的还是原来 src 对应的图片。
+7. 使用 content 属性，我们还可以让普通标签元素变成替换元素，但还是有一些局限。前文也说到了，替换元素的固有尺寸是无法设置的
+
+8. content 属性生成的内容都是替换元素？没错，就是替换元素！
+
+- 我们使用 content 生成的文本是无法选中、无法复制的，好像设置了 userselect:none 声明一般
+- 不能左右:empty 伪类。:empty 是一个 CSS 选择器，当元素里面无内容的时候进行匹配
+- content 动态生成值无法获取
+
+**2.content 内容生成技术**
+
+1. content 辅助元素生成
