--- a/css/css世界/第4章盒尺寸四大家族.md
+++ b/css/css世界/第4章盒尺寸四大家族.md
@@ -45,3 +45,46 @@
 **2.content 内容生成技术**
 
 1. content 辅助元素生成
+2. content 字符内容生成
+3. content 图片生成，虽然支持的图片格式多种多样，但是实际项目中，content 图片生成用得并不多，主要原因在于图片的尺寸不好控制，我们设置宽高无法改变图片的固有尺寸。所以，伪元素中的图片更多的是使用 background-image 模拟。
+
+### 二.padding 属性
+
+1. padding 超过 width 时元素宽度以 padding 为准
+2. 层叠现象：
+
+- 是纯视觉层叠，不影响外部尺寸:box-shadow 以及 outline
+- 会影响外部尺寸:inline 元素的 padding 层叠
+
+如果父容器 overflow:auto，层叠区域超出父容器的时候，没有滚动条出现，则是纯视觉的；如果出现滚动条，则会影响尺寸、影响布局。  
+实际上，对于非替换元素的内联元素，不仅 padding 不会加入行盒高度的计算，margin
+和 border 也都是如此，都是不计算高度，但实际上在内联盒周围发生了渲染。
+
+3. padding 百分比值无论是水平方向还是垂直方向均是相对于宽度计算的
+4. 滚动容器底部留白使用 padding 是不推荐的，推荐用 margin
+
+### 三.margin 属性
+
+1. margin 的百分比值无论是水平方向还是垂直方向都是相对于宽度计算的
+2. margin 合并：块级元素的上外边距（margin-top）与下外边距（margin-bottom）有时会合并为单个外边距，这样的现象称为“margin 合并”
+
+- **块级元素**，但不包括浮动和绝对定位元素，尽管浮动和绝对定位可以让元素块状化。
+- **只发生在垂直方向**，需要注意的是，这种说法在不考虑 writing-mode 的情况下才是正确的，严格来讲，应该是只发生在和当前文档流方向的相垂直的方向上。由于默认文档流是水平流，因此发生 margin 合并的就是垂直方向。
+
+3. margin 合并的 3 种场景
+
+- 相邻兄弟元素 margin 合并
+- 父级和第一个/最后一个子元素
+- 空块级元素的 margin 合并,垂直方向的上下 margin 值合二为一
+
+如果有人不希望空 div 元素有 margin 合并，可以进行如下操作：
+
+- 设置垂直方向的 border
+- 设置垂直方向的 padding
+- 里面添加内联元素（直接 Space 键空格是没用的）
+- 设置 height 或者 min-height
+
+4. margin 合并的计算规则：“正正取大值”“正负值相加”“负负最负值”3 句话
+5. 为什么明明容器定高、元素定高，margin:auto 却无法垂直居中？
+   原因在于触发 margin:auto 计算有一个前提条件，就是 width 或 height 为 auto 时，元素是具有对应方向的自动填充特性的。比方说这里，假如说把.son 元素的 height:100px 去
+   掉，.son 的高度会自动和父元素等高变成 200px 吗？显然不会！因此无法触发 margin:auto 计算，故而无法垂直居中
