--- a/css/css世界/第4章盒尺寸四大家族.md
+++ b/css/css世界/第4章盒尺寸四大家族.md
@@ -88,3 +88,53 @@
 5. 为什么明明容器定高、元素定高，margin:auto 却无法垂直居中？
    原因在于触发 margin:auto 计算有一个前提条件，就是 width 或 height 为 auto 时，元素是具有对应方向的自动填充特性的。比方说这里，假如说把.son 元素的 height:100px 去
    掉，.son 的高度会自动和父元素等高变成 200px 吗？显然不会！因此无法触发 margin:auto 计算，故而无法垂直居中
+6. 可能有人又会问了：我们垂直方向 margin 无法实现居中了吗？当然是可以的，而且场景还不止一种
+
+- 第一种方法是使用 writing-mode 改变文档流的方向：
+
+```
+.father {
+    height: 200px;
+    writing-mode: vertical-lr;
+}
+.son {
+    height: 100px;
+    margin: auto;
+}
+```
+
+- 第二种方法，绝对定位元素的 margin:auto 居中
+
+```
+.father {
+    width: 300px; height:150px;
+    position: relative;
+}
+.son {
+    position: absolute;
+    top: 0; right: 0; bottom: 0; left: 0;
+}
+```
+
+7. writing-mode
+   writing-mode:horizontal-tb;//默认：水平方向，从上到下
+   writing-mode: vertical-rl;//垂直方向，从右向左 水平方向也能 margin 重叠
+   writing-mode: vertical-lr;//垂直方向，从左向右
+8. margin 无效情况：
+
+- display 计算值 inline 的非替换元素的垂直 margin 是无效的，虽然规范提到有渲染，但浏览器表现却未寻得一点踪迹，这和 padding 是有明显区别的。对于内联替换元素，垂直 margin 有效，并且没有 margin 合并的问题，所以图片永远不会发生 margin 合并
+- 表格中的<tr>和<td>元素或者设置 display 计算值是 table-cell 或 table-row 的元素的 margin 都是无效的。但是，如果计算值是 table-caption、table 或者 inline-table 则没有此问题，可以通过 margin 控制外间距，甚至::first-letter 伪元素也可以解析 margin
+- 绝对定位元素非定位方位的 margin 值“无效”,主要是因为绝对定位元素的渲染是独立的，普通元素和兄弟元素是心连心，你动我也动，但是绝对定位元素由于独立渲染无法和兄弟元素插科打诨，因此，margin 无法影响兄弟元素定位，所以看上去就“无效”。
+- 定高容器的子元素的 margin-bottom 或者宽度定死的子元素的 margin-right 的定位“失效”。
+
+### 四：border
+
+1. border-width 还支持若干关键字:
+
+- thin：薄薄的，等同于 1px
+- medium（默认值）：薄厚均匀，等同于 3px
+- thick：厚厚的，等同于 4px
+
+border-style:double 至少 3px 才有效果
+
+2. 当没有指定 border-color 颜色值的时候，会使用当前元素的 color 计算值作为边框色。具有类似特性的 CSS 属性还有 outline、box-shadow 和 text-shadow 等
