--- a/css/css世界/第5章内联元素与流.md
+++ b/css/css世界/第5章内联元素与流.md
@@ -9,4 +9,24 @@
 
 ### 二：line-height
 
+1. div 高度是由行高决定的，而非文字。
+2. 行距 = line-height - font-size
+3. 大多数场景下，内容区域和 em-box 是不一样的，内容区域高度受 font-family 和 font-size 双重影响，而 em-box 仅受 font-size 影响，通常内容区域高度要更高一些。除了下面这种情况，也就是“当我们的字体是宋体的时候，内容区域和 em-box 是等同的”，因为宋体是一种正统的印刷字体，方方正正，所以千万不要小看宋体。
+4. line-height 计算:
+
+- 数值，如 line-height:1.5，其最终的计算值是和当前 font-size 相乘后的值
+- 百分比值，如 line-height:150%，其最终的计算值是和当前 font-size 相乘后
+  的值
+- 长度值，也就是带单位的值，如 line-height:21px 或者 line-height:1.5em 等，此处 em 是一个相对于 font-size 的相对单位
+
+**备注:**
+
+- line-height:150%和 line-height:1.5em 继承的并不是 150%或者 1.5em，而是<父元素的 line-height 计算值
+- line-height:1.5 的继承是属性值 1.5
+
+5. 无论内联元素 line-height 如何设置，最终父级元素的高度都是由数值大的
+   那个 line-height 决定的，我称之为“内联元素 line-height 的大值特性”
+
+### 三：vertical-align
+
 1.
