--- a/css/css世界/第5章内联元素与流.md
+++ b/css/css世界/第5章内联元素与流.md
@@ -29,4 +29,62 @@
 
 ### 三：vertical-align
 
-1.
+1. vertical-align:baseline 等同于 vertical-align:0，vertical-align 的属性值支持数值，更不知道支持负值
+2. vertical-align 属性值分为以下 4 类：
+
+- 线类，如 baseline（默认值）、top、middle、bottom；
+- 文本类，如 text-top、text-bottom；
+- 上标下标类，如 sub、super；
+- 数值百分比类，如 20px、2em、20%等。
+
+3. vertical-align 的默认值是 baseline，由于是相对字母 x 的下边缘对齐，而中文和部分英文字形的下边缘要低于字母 x 的下边缘，因
+   此，会给人感觉文字是明显偏下的，一般都会进行调整。
+4. vertical-align 的属性值支持数值，也支持负值。
+5. verticalalign 属性的百分比值则是相对于 line-height 的计算值计算的。
+6. vertical-align 起作用是有前提条件的，这个前提条件就是：只能应用于内联元素以及 display 值为 table-cell 的元素。
+   换句话说，vertical-align 属性只能作用在 display 计算值为 inline、inline-block，inline-table 或 table-cell 的元素上。
+7. 有一些 CSS 属性值会在背后默默地改变元素 display 属性的计算值，从而导致 vertical-align 不起作用。比方说，浮动和绝对定位会让元素块状化。
+8. 非主动触发位移的内联元素是不可能跑到计算容器外面的，
+
+### 四：深入理解 vertical-align 线性类属性值
+
+1. 一个 inline-block 元素，如果里面没有内联元素，或者 overflow 不是 visible，则该元素的基线就是其 margin 底边缘；否则其基线就是元素里面最后一行内联元素的基线。
+2. 消除底部间隙：line-height: 0; font-size: 0; vertical-align: bottom; /_ top、middle 都可以 _/
+3. 的最佳图标实践 CSS 如下：
+
+```
+.icon {
+    display: inline-block;
+    width: 20px; height: 20px;
+    background: url(sprite.png) no-repeat;
+    white-space: nowrap;
+    letter-spacing: -1em;
+    text-indent: -999em;
+}
+.icon:before {
+    content: '\3000';
+}
+/* 具体图标 */
+.icon-xxx {
+    background-position: 0 -20px;
+}
+```
+
+4. 了解 vertial-align:top/bottom
+
+- 内联元素：元素底部和当前行框盒子的顶部对齐
+- table-cell 元素：元素底 padding 边缘和表格行的顶部对齐
+
+用更通俗的话解释就是：如果是内联元素，则和这一行位置最高的内联元素的顶部对齐；如果 display 计算值是 table-cell 的元素，我们不妨脑补成<td>元素，则和<tr>元素上边缘对齐。
+
+5. vertial-align:middle 与近似垂直居中
+
+- 内联元素：元素的垂直中心点和行框盒子基线往上 1/2 x-height 处对齐
+- table-cell 元素：单元格填充盒子相对于外面的表格行居中对齐
+
+### 五：深入理解 vertical-align 文本类属性值
+
+1. 文本类属性值指的就是 text-top 和 text-bottom，定义如下
+
+- vertical-align:text-top：盒子的顶部和父级内容区域的顶部对齐
+- ertical-align:text-bottom：盒子的底部和父级内容区域的底部对齐
