--- a/css/css世界/第6章：流的破坏与保护.md
+++ b/css/css世界/第6章：流的破坏与保护.md
@@ -9,4 +9,35 @@
 
 2. 包裹性：假设浮动元素父元素宽度 200px，浮动元素子元素是一个 128px 宽度的图片，则此时浮动元素宽度表现为“包裹”，就是里面图片的宽度 128px
 3. 自适应性：如果浮动元素的子元素不只是一张 128px 宽度的图片，还有一大波普通的文字，则此时浮动元素宽度就自适应父元素的 200px 宽度，最终的宽度表现也是 200px。
-4.
+4. 浮动锚点是 float 元素所在的“流”中的一个点，这个点本身并不浮动，就表现而言更像一个没有 margin、border 和 padding 的空的内联元素。
+5. 浮动参考指的是浮动元素对齐参考的实体。
+6. 实例：每一行内联元素都有一个“行框盒子”，这个例子中标题文字比较多，两行显示了，因此有上下两个“行框盒子”，而“更多”所在的 a 元素是在标题文字后面，位于第二行，因此，这里设置了 float:right 的 a 元素是相对于第二行的“行框盒子”对齐的
+
+```
+<h3>标题<a href="#">更多</a></h3>
+```
+
+### 二：clear
+
+1. clear: none | left | right | both
+   官方对 clear 属性的解释是：“元素盒子的边不能和前面的浮动元素相邻。”
+2. ，clear 属性是让自身不能和前面的浮动元素相邻，注意这里“前面的”3 个字，也就是 clear 属性对“后面的”浮动元素是不闻不问的。
+3. clear 属性只有块级元素才有效的，而::after 等伪元素默认都是内联水平，这就是借助伪元素清除浮动影响时需要设置 display 属性值的原因。
+
+### 三：BFC
+
+1. ，BFC 元素是不可能发生 margin 重叠的，因为 margin
+   重叠是会影响外面的元素的；BFC 元素也可以用来清除浮动的影响。
+2. 那什么时候会触发 BFC 呢？常见的情况如下：
+
+- html 根元素；
+- float 的值不为 none；
+- overflow 的值为 auto、scroll 或 hidden；
+- display 的值为 table-cell、table-caption inline-block 中的任何一个；
+- position 的值不为 relative 和 static。
+
+### 四：overflow
+
+1. overflow 剪裁界线 border box：当子元素内容超出容器宽度高度限制的时候，剪裁的边界是 border box 的内边缘，而非 padding box 的内边缘
+2. 要尽量避免滚动容器设置 padding-bottom 值，除了样式表现不一致外，还会导致 scrollHeight 值不一样
+3. 如果 overflow-x 和 overflow-y 属性中的一个值设置为 visible 而另外一个设置为 scroll、auto 或 hidden，则 visible 的样式表现会如同 auto。也就是说，除非 overflow-x 和 overflow-y 的属性值都是 visible，否则 visible 会当成 auto 来解析。换句话说，永远不可能实现一个方向溢出剪裁或滚动，另一方向内容溢出显示的效果。
