--- a/css/css世界/第6章：流的破坏与保护.md
+++ b/css/css世界/第6章：流的破坏与保护.md
@@ -41,3 +41,48 @@
 1. overflow 剪裁界线 border box：当子元素内容超出容器宽度高度限制的时候，剪裁的边界是 border box 的内边缘，而非 padding box 的内边缘
 2. 要尽量避免滚动容器设置 padding-bottom 值，除了样式表现不一致外，还会导致 scrollHeight 值不一样
 3. 如果 overflow-x 和 overflow-y 属性中的一个值设置为 visible 而另外一个设置为 scroll、auto 或 hidden，则 visible 的样式表现会如同 auto。也就是说，除非 overflow-x 和 overflow-y 的属性值都是 visible，否则 visible 会当成 auto 来解析。换句话说，永远不可能实现一个方向溢出剪裁或滚动，另一方向内容溢出显示的效果。
+4. 单行文字溢出点点点效果:
+
+```
+.ell {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+```
+
+5. 锚点定位行为的触发条件：
+
+- URL 地址中的锚链与锚点元素对应并有交互行为
+- 可 focus 的锚点元素处于 focus 状态
+
+虽然都是锚点定位，但是这两种定位方法的行为表现还是有差异的，“URL 地址锚链定位”是让元素定位在浏览器窗体的上边缘，而“focus 锚点定位”是让元素在浏览器窗体范围内显示即可，不一定是在上边缘。
+
+6. 锚点定位也可以发生在普通的容器元素上，而且定位行为的发生是由内而外的。“由内而外”指的是，普通元素和窗体同时可滚动的时候，会由内而外触发所有可滚动窗体的锚点定位行为。
+7. 设置了 overflow:hidden 的元素也是可滚动的，说得更干脆点儿就是：overflow:hidden 跟 overflow:auto 和 overflow：scroll 的差别就在于有没有那个滚动条。元素设置了 overflow:hidden 声明，里面内容高度溢出的时候，滚动依然存在，仅仅滚动条不存在！
+
+### 五：position:absolute
+
+1. 当 absolute 和 float 同时存在的时候，float 属性是无任何效果的。
+2. “包含块”计算规则：
+
+- 根元素（很多场景下可以看成是<html>）被称为“初始包含块”，其尺寸等同于浏览器可视窗口的大小。
+- 对于其他元素，如果该元素的 position 是 relative 或者 static，则“包含块”由其最近的块容器祖先盒的 content box 边界形成。
+- 如果元素 position:fixed，则“包含块”是“初始包含块”。
+- 如果元素 position:absolute，则“包含块”由最近的 position 不为 static 的祖先元素建立
+
+3. 绝对定位的定位要相对于 padding box 呢？这其实和 overflow 隐藏也是 padding box 边界类似。
+4. ：一个绝对定位元素，没有任何 left/top/right/bottom 属性设置，并且其祖先元素全部都是非定位元素，其位置在哪里：还是当前位置。
+
+### 六：absolute 与 overflow
+
+1. 如果 overflow 不是定位元素，同时绝对定位元素和 overflow 容器之间也没有定位元素，则 overflow 无法对 absolute 元素进行剪裁。
+
+- overflow 元素父级是定位元素也不会剪裁
+- 如果 overflow 属性所在的元素同时也是定位元素，里面的绝对定位元素会被剪裁
+- 如果 overflow 元素和绝对定位元素之间有定位元素，也会被剪裁
+- 如果 overflow 的属性值不是 hidden 而是 auto 或者 scroll，即使绝对定位元素高宽比 overflow 元素高宽还要大，也都不会出现滚动条
+
+2. 当大家遇到 absolute 元素被剪裁或者 fixed 固定定位失效时，可以看看是不是 transform 属性在作祟
+
+### 七：absolute 的流体特性
