--- a/css/css世界/第6章：流的破坏与保护.md
+++ b/css/css世界/第6章：流的破坏与保护.md
@@ -86,3 +86,17 @@
 2. 当大家遇到 absolute 元素被剪裁或者 fixed 固定定位失效时，可以看看是不是 transform 属性在作祟
 
 ### 七：absolute 的流体特性
+
+1. 当 div position:absolute 时如果只有 left 属性或者只有 right 属性，则由于包裹性，此时.box 宽度是 0。但是在本例中，因为 left 和 right 同时存在，所以宽度就不是 0，而是表现为“格式化宽度”，宽度大小自适应于.box 包含块的 padding box，也就是说，如果包含块 padding box 宽度发生变化，.box 的宽度也会跟着一起变。
+2. 流体特性触发条件：对立方向同时发生定位的时候
+   下面的代码可以让.box 元素正好完全覆盖浏
+   览器的可视窗口，并且如果改变浏览器窗口大小，.box 会自动跟着一起变化：
+
+```
+.box {
+    position: absolute;
+    left: 0; right: 0; top: 0; bottom: 0;
+}
+```
+
+无论设置 padding 还是 margin，其占据的空间一直不变，变化的就是 content box 的尺寸，这就是典型的流体表现特性。
