--- a/css/css世界/第6章：流的破坏与保护.md
+++ b/css/css世界/第6章：流的破坏与保护.md
@@ -100,3 +100,36 @@
 ```
 
 无论设置 padding 还是 margin，其占据的空间一直不变，变化的就是 content box 的尺寸，这就是典型的流体表现特性。
+
+3. 绝对定位元素的 margin:auto 的填充规则和普通流体元素的一模一样：
+
+- 如果一侧定值，一侧 auto，auto 为剩余空间大小
+- 如果两侧均是 auto，则平分剩余空间
+
+### 八：position:relative
+
+1. relative 的定位还有另外两点值得一提：相对定位元素的 left/top/right/bottom 的百分比值是相对于包含块计算的，而不是自身
+2. top 和 bottom 这两个垂直方向的百分比值计算跟 height 的百分比值是一样的，都是相对高度计算的。同时，如果包含块的高度是 auto，那么计算值是 0，偏移无效，也就是说，如果父元素没有设定高度或者不是“格式化高度”，那么 relative 类似 top:20%的代码等同于 top:0。
+3. position:relative 只有一个方向的定位属性会起作用。而孰强孰弱则是与文档流的顺序有关的，默认的文档流是自上而下、从左往右，因此 top/bottom 同时使用的时候，bottom 被干掉；left/right 同时使用的时候，right 毙命。
+
+### 九：position:fixed
+
+1. position:fixed 相对于根元素 html 固定,overflow:hidden 不能裁剪。
+2. position:fixed 蒙层之所以出现背景依然滚动，那是因为滚动元素是根元素，正好是 position:fixed 的“包含块”。所以，如果希望背景被锁定，可以借鉴“absolute 模拟 fixed 定位”的思路，让页面滚动条由内部的普通元素产生即可。 3.如果是移动端项目，阻止 touchmove 事件的默认行为可以防止滚动；如果是桌面端项目，可以让根元素直接 overflow:hidden。但是，Windows 操作系统下的浏览器的滚动条都是占据一定宽度的，滚动条的消失必然会导致页面的可用宽度变化，页面会产生体验更糟糕的晃动问题，那怎么办呢？很简单，我们只需要找个东西填补消失的滚动条就好了。那该找什么东西填充呢？这时候就轮到功勋卓越的 border 属性出马了—消失的滚动条使用同等宽度的透明边框填充！于是，在蒙层显示的同时执行下面的 JavaScript 代码：
+
+```
+var widthBar = 17, root = document.documentElement;
+if (typeof window.innerWidth == 'number') {
+    widthBar = window.innerWidth - root.clientWidth;
+}
+root.style.overflow = 'hidden';
+root.style.borderRight = widthBar + 'px solid transparent';
+```
+
+隐藏的时候执行下面的 JavaScript 代码：
+
+```
+var root = document.documentElement;
+root.style.overflow = '';
+root.style.borderRight = '';
+```
