--- a/js/js语言精粹/第二章：语法.md
+++ b/js/js语言精粹/第二章：语法.md
@@ -22,3 +22,5 @@ obj.equipment                               //undefined
 obj.equipment.model                         //throw "TypeError"
 obj.quuipment && obj.equipment.mnodel       //undefined
 ```
+
+3. 判断对象自身属性：hasOwnProperty
