--- a/js/js语言精粹/第2章：语法，第3章：对象.md
+++ b/js/js语言精粹/第2章：语法，第3章：对象.md
@@ -24,3 +24,5 @@ obj.quuipment && obj.equipment.mnodel       //undefined
 ```
 
 3. 判断对象自身属性：hasOwnProperty
+4. for in 会遍历一个对象的所有属性包括函数和原型中的属性。
+5. delete 不会删除原型链上的属性
