--- a/js/js语言精粹/第4章：函数.md
+++ b/js/js语言精粹/第4章：函数.md
@@ -10,3 +10,11 @@
 
 1. 函数如果没有指定返回值，则返回 undefined
 2. 如果函数调用时在前面加上了 new 前缀，且返回值不是一个对象，则返回 this（该新对象）
+
+### 四：异常
+
+1. throw 语句中断函数的执行。抛出一个 expection 对象（e）,
+
+### 五：闭包
+
+1.
