--- a/css/css世界/第8章：文本处理.md
+++ b/css/css世界/第8章：文本处理.md
@@ -1,1 +1,12 @@
-### 一：
+### 一：font-sze
+
+1. ，并不是所有小于 12px 的 font-size 都会被当作 12px 处理，有一个值例外，那就是 0，也就是说，如果 font-size:0 的字号表现就是 0，那么文字会直接被隐藏掉，并且只能是 font-size:0，哪怕设置成 font-size:0.0000001px，都还是会被当作 12px 处理的。
+
+### 二：text-indent
+
+1.  text-indent 的百分比值是相对于当前元素的“包含块”计算的，而不是当前元素。
+2.  text-indent 仅对第一行内联盒子内容有效。
+3.  非替换元素以外的 display 计算值为 inline 的内联元素设置 text-indent 值无效，如果计算值是 inline-block/inline-table 则会生效。因此，如果父级块状元素设置了 text-indent 属性值，子 inline-block/inline-table 需要设置 text-indent:0 重置。
+4.  input 标签按钮 text-indent 值无效。
+5.  button 标签按钮 text-indent 值有效，但是存在兼容性差异，IE 浏览器理解为单标签，百分比值按照容器计算，而 Chrome 和 Firefox 浏览器标签内还有其他 Shadow DOM 元素，因此百分比值是按照自身的尺寸计算的。
+6.
