--- a/css/css世界/第8章：文本处理.md
+++ b/css/css世界/第8章：文本处理.md
@@ -9,4 +9,86 @@
 3.  非替换元素以外的 display 计算值为 inline 的内联元素设置 text-indent 值无效，如果计算值是 inline-block/inline-table 则会生效。因此，如果父级块状元素设置了 text-indent 属性值，子 inline-block/inline-table 需要设置 text-indent:0 重置。
 4.  input 标签按钮 text-indent 值无效。
 5.  button 标签按钮 text-indent 值有效，但是存在兼容性差异，IE 浏览器理解为单标签，百分比值按照容器计算，而 Chrome 和 Firefox 浏览器标签内还有其他 Shadow DOM 元素，因此百分比值是按照自身的尺寸计算的。
-6.
+
+### 三：letter-spacing 和 word-spacing
+
+1.  letter-spacing 的值再小也不会让 inline-block 列表发生重叠。
+2.  word-spacing 和 letter-spacing 名称类似，其特性也有很多共通之处：
+
+- 都具有继承性。
+- 默认值都是 normal 而不是 0。通常情况下，两者表现并无差异。
+- 都支持负值，都可以让字符重叠。
+- 都支持小数值，如 word-spacing:0.5px。
+- 间隔算法都会受到 text-align:justify 两端对齐的影响。
+
+3. letter-spacing 作用于所有字符，但 word-spacing 仅作用于空格字
+   符。 love 虽然是一个单词，但没有空格，那么很抱歉，word-spacing 无效。
+
+### 四：word-break 和 word-wrap
+
+1. word-break 属性:
+
+- normal：使用默认的换行规则。
+- break-all：允许任意非 CJK（Chinese/Japanese/Korean）文本间的单词断行。
+- keep-all：不允许 CJK 文本中的单词换行，只能在半角空格或连字符处换行。非 CJK 文本的行为实际上和 normal 一致。
+
+2. word-wrap 属性:
+
+- normal：就是大家平常见得最多的正常的换行规则。
+- break-word：一行单词中实在没有其他靠谱的换行点的时候换行。
+
+3. word-wrap 在 CSS3 规范里叫作 overflow-wrap。
+4. word-break:break-all 的作用是所有的都换行，毫不留情，一点儿空隙都不放过，而 word-wrap:break-word 则带有怜悯之心，如果这一行文字有可以换行的点，如空格或 CJK（中文/日文/韩文）之类的，就不打英文单词或字符的主意了，在这些换行点换行，至于对不对齐、好不好看则不关心，因此，很容易出现一片一片空白区域的情况。
+
+### 五：white-space
+
+1. white-space 属性声明了如何处理元素内的空白字符，这类空白字符包括 Space（空格）键、Enter（回车）键、Tab（制表符）键产生的空白。因此，white-space 可以决定图文内容是否在一行显示（回车空格是否生效），是否显示大段连续空白（空格是否生效）等。
+2. white-space 属性：
+
+- normal：合并空白字符和换行符。
+- pre：空白字符不合并，并且内容只在有换行符的地方换行。
+- nowrap：该值和 normal 一样会合并空白字符，但不允许文本环绕。
+- pre-wrap：空白字符不合并，并且内容只在有换行符的地方换行，同时允许文本环绕。
+- pre-line：合并空白字符，但只在有换行符的地方换行，允许文本环绕。
+
+### 六：text-align
+
+1. text-align:justify 要想有两端对齐的效果，需要满足两点：一是有分隔点，如空格；二是要超过一行，此时非最后一行内容会两端对齐。
+2. CSS 世界中有一个 text-align-last 属性，可以规定最后一行内联内容的排列方式。
+
+```
+.justify {
+    text-align-last: justify;
+}
+```
+
+### 七：其他
+
+1. 如何解决 text-decoration 下划线和文本重叠的问题
+
+```
+a {
+    text-decoration: none;
+    border-bottom: 1px solid;
+}
+```
+
+2. 我国的身份证最后一位有可能是字母 X，且各种场合都是指定必须大写。如果我们给输入身份证的 input 输入框设置：
+
+```
+input {
+    text-transform: uppercase;
+}
+```
+
+3. 请问“第”这个字符的颜色是什么
+
+```
+p:first-letter {
+    color: red;
+}
+p > span {
+    color: blue!important;
+}
+<p><span>第一个</span>字符看看会不会变红？</p>
+```
