--- a/js/js语言精粹/第4章：函数.md
+++ b/js/js语言精粹/第4章：函数.md
@@ -15,6 +15,30 @@
 
 1. throw 语句中断函数的执行。抛出一个 expection 对象（e）,
 
-### 五：闭包
+### 五：柯理化
 
-1.
+```
+Function.method('curry',function(){
+    var args = Array.prototype.slice.apply(arguments)
+    var that = this
+    return function(){
+        return that.apply(null,args.contact(Array.prototype.slice.apply(arguments)))
+    }
+})
+```
+
+### 六：记忆
+
+```
+var memoizer = function(memo, formula) {
+    var recur = function(n) {
+    var result = memo[n];
+    if (typeof result !== "number") {
+        result = formula(recur, n);
+        memo[n] = result;
+    }
+    return result;
+    };
+    return recur;
+};
+```
