--- a/css/css世界/第9章：元素的装饰和美化.md
+++ b/css/css世界/第9章：元素的装饰和美化.md
@@ -12,4 +12,5 @@
 - 伪类背景图片只在触发伪类时候才会请求加载（因此建议请求雪碧图---即一堆小图汇总到一张大图上，这样不会有 UI 跳跃感）
 - 不存在的元素，即时样式表里有写，也不会请求加载
 
-2.
+2. 就是 background 无论是单背景图还是多背景图，背景色一定是在最底下的位置。
+3.
