--- a/css/css世界/第10章：元素的显示和隐藏.md
+++ b/css/css世界/第10章：元素的显示和隐藏.md
@@ -10,7 +10,7 @@
 
 此时，图片 1.jpg 是不会有请求的
 
-2. 如果希望元素不可见，同时不占据空间，辅助设备无法访问，但资源有加载，DOM 可访问，则可以直接使用 display:none 隐藏。例如：
+2. 如果希望元素不可见，同时不占据空间，辅助设备无法访问，但资源有加载，DOM 可访问，则可以直接使用 display:none 隐藏。
 3. 如果希望元素不可见，同时不占据空间，辅助设备无法访问，但显隐的时候可以有 transition 淡入淡出效果，则可以使用：
 
 ```
@@ -66,5 +66,19 @@
 .opacity {
     opacity: 0;
     filter: Alpha(opacity=0);
+}
+```
+
+### 二：visibility 与元素的显隐
+
+1. HTML5 中新增了 hidden 这个布尔属性，可以让元素天生 display:none 隐藏。
+2. 父元素设置 visibility:hidden，子元素也会看不见，究其原因是继承性，子元素继承了 visibility:hidden，但是，如果子元素设置了 visibility:visible，则子元素又会显示出来。这个和 display 隐藏有着质的区别。
+3. CSS3 transition 支持的 CSS 属性中有 visibility，但是并没有 display。
+4. 我们需要对隐藏元素进行尺寸和位置的获取，以便对交互布局进行精准定位。此时，建议使用 visibility 隐藏：
+
+```
+.hidden {
+    position: absolute;
+    visibility: hidden;
 }
 ```
