--- a/js/js语言精粹/其他.md
+++ b/js/js语言精粹/其他.md
@@ -6,4 +6,7 @@
    NaN !== NaN //true
    isNaN(NaN) //true
    isNaN(0) //false
-3. undefined 和 NaN 并不是常量。他们是全局变量，而且你也可以改吧他们的值。
+3. undefined 和 NaN 并不是常量。他们是全局变量，而且你也可以改他们的值。
+4. 不能在 if 语句中使用 function
+   一个语句不能以一个函数表达式开头，推荐：(function({}))()
+   5.new 运算符创建一个继承于其运算符的原型的新对象，然后调用改运算数，把新创建的对象绑定给 this。
