--- a/浏览器/blogs/浏览器原理.md
+++ b/浏览器/blogs/浏览器原理.md
@@ -291,3 +291,112 @@ webkit 中宽度的计算过程是（RenderBox 类的 calcWidth 方法）：
 ### 八：绘制
 
 1. 绘制阶段，遍历渲染树并调用渲染对象的 paint 方法将它们的内容显示在屏幕上，绘制使用 UI 基础组件，这在 UI 的章节有更多的介绍。
+
+2. 全局和增量
+
+和布局一样，绘制也可以是全局的——绘制完整的树——或增量的。在增量的绘制过程中，一些渲染对象以不影响整棵树的方式改变，改变的渲染对象使其在屏幕上的矩形区域失效，这将导致操作系统将其看作 dirty 区域，并产生一个 paint 事件，操作系统很巧妙的处理这个过程，并将多个区域合并为一个。Chrome 中，这个过程更复杂些，因为渲染对象在不同的进程中，而不是在主进程中。Chrome 在一定程度上模拟操作系统的行为，表现为监听事件并派发消息给渲染根，在树中查找到相关的渲染对象，重绘这个对象（往往还包括它的 children）。
+
+3. 绘制顺序
+
+css2 定义了绘制过程的顺序——http://www.w3.org/TR/CSS21/zindex.html。这个就是元素压入堆栈的顺序，这个顺序影响着绘制，堆栈从后向前进行绘制。
+
+一个块渲染对象的堆栈顺序是：
+
+1. 背景色
+
+2. 背景图
+
+3. border
+
+4. children
+
+5. outline
+
+6. WebKit 矩形存储
+
+重绘前，WebKit 将旧的矩形保存为位图，然后只绘制新旧矩形的差集。
+
+### 九：动态变化
+
+浏览器总是试着以最小的动作响应一个变化，所以一个元素颜色的变化将只导致该元素的重绘，元素位置的变化将大致元素的布局和重绘，添加一个 Dom 节点，也会大致这个元素的布局和重绘。一些主要的变化，比如增加 html 元素的字号，将会导致缓存失效，从而引起整数的布局和重绘。
+
+### 十：渲染引擎的线程
+
+渲染引擎是单线程的，除了网络操作以外，几乎所有的事情都在单一的线程中处理，在 Firefox 和 Safari 中，这是浏览器的主线程，Chrome 中这是 tab 的主线程。
+
+网络操作由几个并行线程执行，并行连接的个数是受限的（通常是 2－6 个）。
+
+### 十一：CSS2 可视模型
+
+1. 画布 The Canvas
+
+根据 CSS2 规范，术语 canvas 用来描述格式化的结构所渲染的空间——浏览器绘制内容的地方。画布对每个维度空间都是无限大的，但浏览器基于 viewport 的大小选择了一个初始宽度。
+
+根据http://www.w3.org/TR/CSS2/zindex.html的定义，画布如果是包含在其他画布内则是透明的，否则浏览器会指定一个颜色。
+
+2. CSS 盒模型
+
+CSS 盒模型描述了矩形盒，这些矩形盒是为文档树中的元素生成的，并根据可视的格式化模型进行布局。每个 box 包括内容区域（如图片、文本等）及可选的四周 padding、border 和 margin 区域。
+
+每个节点生成 0－n 个这样的 box。
+
+所有的元素都有一个 display 属性，用来决定它们生成 box 的类型，例如：
+
+block －生成块状 box
+
+inline －生成一个或多个行内 box
+
+none －不生成 box
+
+默认的是 inline，但浏览器样式表设置了其他默认值，例如，div 元素默认为 block。可以访问http://www.w3.org/TR/CSS2/sample.html查看更多的默认样式表示例。
+
+3. 定位策略 Position scheme
+
+这里有三种策略：
+
+1.normal －对象根据它在文档的中位置定位，这意味着它在渲染树和在 Dom 树中位置一致，并根据它的盒模型和大小进行布局。
+
+2.float －对象先像普通流一样布局，然后尽可能的向左或是向右移动。
+
+3.absolute －对象在渲染树中的位置和 Dom 树中位置无关。
+
+static 和 relative 是 normal，absolute 和 fixed 属于 absolute。
+
+在 static 定位中，不定义位置而使用默认的位置。其他策略中，作者指定位置——top、bottom、left、right。
+
+Box 布局的方式由这几项决定：box 的类型、box 的大小、定位策略及扩展信息（比如图片大小和屏幕尺寸）。
+
+4. Box类型
+
+Block box：构成一个块，即在浏览器窗口上有自己的矩形
+
+Inline box：并没有自己的块状区域，但包含在一个块状区域内
+
+block一个挨着一个垂直格式化，inline则在水平方向上格式化
+
+Inline盒模型放置在行内或是line box中，每行至少和最高的box一样高，当box以baseline对齐时——即一个元素的底部和另一个box上除底部以外的某点对齐，行高可以比最高的box高。当容器宽度不够时，行内元素将被放到多行中，这在一个p元素中经常发生。
+
+### 十二：定位postion
+
+1. Relative
+
+相对定位——先按照一般的定位，然后按所要求的差值移动。
+
+2. Floats
+
+一个浮动的box移动到一行的最左边或是最右边，其余的box围绕在它周围。下面这段html：
+```
+<p>
+<img src="images/image.gif" width="100" height="100">Lorem ipsum dolor sit amet, consectetuer...
+</p>
+```
+
+3. Absolute和Fixed
+
+这种情况下的布局完全不顾普通的文档流，元素不属于文档流的一部分，大小取决于容器。Fixed时，容器为viewport（可视区域）。
+
+注意－fixed即使在文档流滚动时也不会移动。
+
+4. Layered representation
+
+这个由CSS属性中的z-index指定，表示盒模型的第三个大小，即在z轴上的位置。Box分发到堆栈中（称为堆栈上下文），每个堆栈中靠后的元素将被较早绘制，栈顶靠前的元素离用户最近，当发生交叠时，将隐藏靠后的元素。堆栈根据z-index属性排序，拥有z-index属性的box形成了一个局部堆栈，viewport有外部堆栈
