--- a/python/muke/8.迭代.md
+++ b/python/muke/8.迭代.md
@@ -57,3 +57,64 @@ for index, name in enumerate(L):
 ```
 
 可见，索引迭代也不是真的按索引访问，而是由 enumerate() 函数自动把每个元素变成 (index, element) 这样的 tuple，再迭代，就同时获得了索引和元素本身。
+
+### 三：迭代 dict 的 value
+
+1. 我们已经了解了 dict 对象本身就是可迭代对象，用 for 循环直接迭代 dict，可以每次拿到 dict 的一个 key。
+
+dict 对象有一个 values() 方法，这个方法把 dict 转换成一个包含所有 value 的 list，这样，我们迭代的就是 dict 的每一个 value：
+
+```
+d = { 'Adam': 95, 'Lisa': 85, 'Bart': 59 }
+print d.values()
+# [85, 95, 59]
+for v in d.values():
+    print v
+# 85
+# 95
+# 59
+```
+
+2. 如果仔细阅读 Python 的文档，还可以发现，dict 除了 values()方法外，还有一个 itervalues() 方法，用 itervalues() 方法替代 values() 方法，迭代效果完全一样：
+
+```
+d = { 'Adam': 95, 'Lisa': 85, 'Bart': 59 }
+print d.itervalues()
+# <dictionary-valueiterator object at 0x106adbb50>
+for v in d.itervalues():
+    print v
+# 85
+# 95
+# 59
+```
+
+3. 那这两个方法有何不同之处呢？
+
+- values() 方法实际上把一个 dict 转换成了包含 value 的 list。
+- 但是 itervalues() 方法不会转换，它会在迭代过程中依次从 dict 中取出 value，所以 itervalues() 方法比 values() 方法节省了生成 list 所需的内存。
+- 打印 itervalues() 发现它返回一个 dictionary-valueiterator 对象，这说明在 Python 中，for 循环可作用的迭代对象远不止 list，tuple，str，unicode，dict 等，任何可迭代对象都可以作用于 for 循环，而内部如何迭代我们通常并不用关心。
+
+如果一个对象说自己可迭代，那我们就直接用 for 循环去迭代它，可见，迭代是一种抽象的数据操作，它不对迭代对象内部的数据有任何要求。
+
+### 四：迭代 dict 的 key 和 value
+
+1. 我们看看 dict 对象的 items() 方法返回的值：
+
+```
+>>> d = { 'Adam': 95, 'Lisa': 85, 'Bart': 59 }
+>>> print d.items()
+[('Lisa', 85), ('Adam', 95), ('Bart', 59)]
+```
+
+可以看到，items() 方法把 dict 对象转换成了包含 tuple 的 list，我们对这个 list 进行迭代，可以同时获得 key 和 value：
+
+```
+>>> for key, value in d.items():
+...     print key, ':', value
+...
+Lisa : 85
+Adam : 95
+Bart : 59
+```
+
+和 values() 有一个 itervalues() 类似， items() 也有一个对应的 iteritems()，iteritems() 不把 dict 转换成 list，而是在迭代过程中不断给出 tuple，所以， iteritems() 不占用额外的内存。
