--- a/js/es6总结/变量的解构赋值.md
+++ b/js/es6总结/变量的解构赋值.md
@@ -223,3 +223,187 @@ c // "l"
 d // "l"
 e // "o"
 ```
+
+2. 类似数组的对象都有一个 length 属性，因此还可以对这个属性解构赋值。
+
+```
+let {length : len} = 'hello';
+len // 5
+```
+
+### 四：数值和布尔值的解构赋值
+
+1. 解构赋值时，如果等号右边是数值和布尔值，则会先转为对象。
+
+```
+let {toString: s} = 123;
+s === Number.prototype.toString // true
+
+let {toString: s} = true;
+s === Boolean.prototype.toString // true
+```
+
+上面代码中，数值和布尔值的包装对象都有 toString 属性，因此变量 s 都能取到值。
+
+解构赋值的规则是，只要等号右边的值不是对象或数组，就先将其转为对象。由于 undefined 和 null 无法转为对象，所以对它们进行解构赋值，都会报错。
+
+```
+let { prop: x } = undefined; // TypeError
+let { prop: y } = null; // TypeError
+```
+
+### 五：函数参数的解构赋值
+
+1. 函数参数的解构也可以使用默认值。
+
+```
+function move({x = 0, y = 0} = {}) {
+  return [x, y];
+}
+
+move({x: 3, y: 8}); // [3, 8]
+move({x: 3}); // [3, 0]
+move({}); // [0, 0]
+move(); // [0, 0]
+```
+
+注意，下面的写法会得到不一样的结果。
+
+```
+function move({x, y} = { x: 0, y: 0 }) {
+  return [x, y];
+}
+
+move({x: 3, y: 8}); // [3, 8]
+move({x: 3}); // [3, undefined]
+move({}); // [undefined, undefined]
+move(); // [0, 0]
+```
+
+上面代码是为函数 move 的参数指定默认值，而不是为变量 x 和 y 指定默认值，所以会得到与前一种写法不同的结果。
+
+undefined 就会触发函数参数的默认值。
+
+[1, undefined, 3].map((x = 'yes') =>
+
+```
+[1, undefined, 3].map((x = 'yes') => x);
+// [ 1, 'yes', 3 ]
+```
+
+### 六：圆括号问题
+
+1. 可以使用圆括号的情况只有一种：赋值语句的非模式部分，可以使用圆括号。
+
+```
+[(b)] = [3]; // 正确
+({ p: (d) } = {}); // 正确
+[(parseInt.prop)] = [3]; // 正确
+```
+
+### 七：用途
+
+1. 交换变量的值
+
+```
+let x = 1;
+let y = 2;
+
+[x, y] = [y, x];
+```
+
+2. 从函数返回多个值
+
+函数只能返回一个值，如果要返回多个值，只能将它们放在数组或对象里返回。有了解构赋值，取出这些值就非常方便。
+
+```
+// 返回一个数组
+
+function example() {
+  return [1, 2, 3];
+}
+let [a, b, c] = example();
+
+// 返回一个对象
+
+function example() {
+  return {
+    foo: 1,
+    bar: 2
+  };
+}
+let { foo, bar } = example();
+```
+
+3. 函数参数的定义
+
+```
+// 参数是一组有次序的值
+function f([x, y, z]) { ... }
+f([1, 2, 3]);
+
+// 参数是一组无次序的值
+function f({x, y, z}) { ... }
+f({z: 3, y: 2, x: 1});
+```
+
+4. 提取 JSON 数据
+
+```
+let jsonData = {
+  id: 42,
+  status: "OK",
+  data: [867, 5309]
+};
+
+let { id, status, data: number } = jsonData;
+
+console.log(id, status, number);
+// 42, "OK", [867, 5309]
+```
+
+5. 函数参数的默认值
+
+```
+jQuery.ajax = function (url, {
+  async = true,
+  beforeSend = function () {},
+  cache = true,
+  complete = function () {},
+  crossDomain = false,
+  global = true,
+  // ... more config
+} = {}) {
+  // ... do stuff
+};
+```
+
+6. 遍历 Map 结构
+
+任何部署了 Iterator 接口的对象，都可以用 for...of 循环遍历。Map 结构原生支持 Iterator 接口，配合变量的解构赋值，获取键名和键值就非常方便。
+
+```
+const map = new Map();
+map.set('first', 'hello');
+map.set('second', 'world');
+
+for (let [key, value] of map) {
+  console.log(key + " is " + value);
+}
+// first is hello
+// second is world
+```
+
+如果只想获取键名，或者只想获取键值，可以写成下面这样。
+
+```
+// 获取键名
+for (let [key] of map) {
+  // ...
+}
+
+// 获取键值
+for (let [,value] of map) {
+  // ...
+}
+```
