--- a/python/muke/python进阶/函数式编程.md
+++ b/python/muke/python进阶/函数式编程.md
@@ -85,3 +85,116 @@ a.strip()
 ```
 
 结果：'123'
+
+### 四：python 中自定义排序函数
+
+1. Python 内置的 sorted()函数可对 list 进行排序：
+
+```
+>>>sorted([36, 5, 12, 9, 21])
+
+[5, 9, 12, 21, 36]
+```
+
+但 sorted()也是一个高阶函数，它可以接收一个比较函数来实现自定义排序，比较函数的定义是，传入两个待比较的元素 x, y，如果 x 应该排在 y 的前面，返回 -1，如果 x 应该排在 y 的后面，返回 1。如果 x 和 y 相等，返回 0。
+
+因此，如果我们要实现倒序排序，只需要编写一个 reversed_cmp 函数：
+
+```
+def reversed_cmp(x, y):
+    if x > y:
+        return -1
+    if x < y:
+        return 1
+    return 0
+```
+
+这样，调用 sorted() 并传入 reversed_cmp 就可以实现倒序排序：
+
+```
+>>> sorted([36, 5, 12, 9, 21], reversed_cmp)
+[36, 21, 12, 9, 5]
+```
+
+sorted()也可以对字符串进行排序，字符串默认按照 ASCII 大小来比较：
+
+```
+>>> sorted(['bob', 'about', 'Zoo', 'Credit'])
+['Credit', 'Zoo', 'about', 'bob']
+```
+
+### 五：python 中返回函数
+
+1. 例如，定义一个函数 f()，我们让它返回一个函数 g，可以这样写：
+
+```
+def f():
+    print 'call f()...'
+    # 定义函数g:
+    def g():
+        print 'call g()...'
+    # 返回函数g:
+    return g
+```
+
+### 六：python 中闭包
+
+1. 在函数内部定义的函数和外部定义的函数是一样的，只是他们无法被外部访问：
+
+```
+def g():
+    print 'g()...'
+
+def f():
+    print 'f()...'
+    return g
+```
+
+将 g 的定义移入函数 f 内部，防止其他代码调用 g：
+
+```
+def f():
+    print 'f()...'
+    def g():
+        print 'g()...'
+    return g
+```
+
+但是，考察上一小节定义的 calc_sum 函数：
+
+```
+def calc_sum(lst):
+    def lazy_sum():
+        return sum(lst)
+    return lazy_sum
+```
+
+注意: 发现没法把 lazy_sum 移到 calc_sum 的外部，因为它引用了 calc_sum 的参数 lst。
+
+像这种内层函数引用了外层函数的变量（参数也算变量），然后返回内层函数的情况，称为闭包（Closure）。
+
+闭包的特点是返回的函数还引用了外层函数的局部变量，所以，要正确使用闭包，就要确保引用的局部变量在函数返回后不能变。举例如下：
+
+```
+# 希望一次返回3个函数，分别计算1x1,2x2,3x3:
+def count():
+    fs = []
+    for i in range(1, 4):
+        def f():
+             return i*i
+        fs.append(f)
+    return fs
+
+f1, f2, f3 = count()
+```
+
+你可能认为调用 f1()，f2()和 f3()结果应该是 1，4，9，但实际结果全部都是 9（请自己动手验证）。
+
+原因就是当 count()函数返回了 3 个函数时，这 3 个函数所引用的变量 i 的值已经变成了 3。由于 f1、f2、f3 并没有被调用，所以，此时他们并未计算 i\*i，当 f1 被调用时：
+
+```
+>>> f1()
+9     # 因为f1现在才计算i*i，但现在i的值已经变为3
+```
+
+因此，返回函数不要引用任何循环变量，或者后续会发生变化的变量。
