--- a/js/es6总结/3.函数的扩展.md
+++ b/js/es6总结/3.函数的扩展.md
@@ -51,3 +51,46 @@ function foo({x, y = 5} = {}) {
 
 foo() // undefined 5
 ```
+
+### 三：参数默认值的位置
+
+1. 通常情况下，定义了默认值的参数，应该是函数的尾参数。
+
+```
+// 例一
+function f(x = 1, y) {
+  return [x, y];
+}
+
+f() // [1, undefined]
+f(2) // [2, undefined])
+f(, 1) // 报错
+f(undefined, 1) // [1, 1]
+
+// 例二
+function f(x, y = 5, z) {
+  return [x, y, z];
+}
+
+f() // [undefined, 5, undefined]
+f(1) // [1, 5, undefined]
+f(1, ,2) // 报错
+f(1, undefined, 2) // [1, 5, 2]
+```
+
+上面代码中，有默认值的参数都不是尾参数。这时，无法只省略该参数，而不省略它后面的参数，除非显式输入 undefined。
+如果传入 undefined，将触发该参数等于默认值，null 则没有这个效果。
+
+### 四：函数的 length 属性
+
+1. 指定了默认值以后，函数的 length 属性，将返回没有指定默认值的参数个数。也就是说，指定了默认值后，length 属性将失真。
+
+```
+(function (a) {}).length // 1
+(function (a = 5) {}).length // 0
+(function (a, b, c = 5) {}).length // 2
+```
+
+上面代码中，length 属性的返回值，等于函数的参数个数减去指定了默认值的参数个数。比如，上面最后一个函数，定义了 3 个参数，其中有一个参数 c 指定了默认值，因此 length 属性等于 3 减去 1，最后得到 2。
+
+2.
