--- a/js/es6总结/4.数组的扩展.md
+++ b/js/es6总结/4.数组的扩展.md
@@ -94,3 +94,97 @@ Array.from(arrayLike).map(x => x * x);
 Array.from([1, 2, 3], (x) => x * x)
 // [1, 4, 9]
 ```
+
+### 三：数组实例的 find() 和 findIndex()
+
+1. 数组实例的 find 方法，用于找出第一个符合条件的数组成员。它的参数是一个回调函数，所有数组成员依次执行该回调函数，直到找出第一个返回值为 true 的成员，然后返回该成员。如果没有符合条件的成员，则返回 undefined。
+2. 数组实例的 findIndex 方法的用法与 find 方法非常类似，返回第一个符合条件的数组成员的位置，如果所有成员都不符合条件，则返回-1。
+3. 这两个方法都可以接受第二个参数，用来绑定回调函数的 this 对象。
+
+```
+function f(v){
+  return v > this.age;
+}
+let person = {name: 'John', age: 20};
+[10, 12, 26, 15].find(f, person);    // 26
+```
+
+### 四：数组实例的 entries()，keys() 和 values()
+
+1. keys()是对键名的遍历、values()是对键值的遍历，entries()是对键值对的遍历。
+
+```
+for (let index of ['a', 'b'].keys()) {
+  console.log(index);
+}
+// 0
+// 1
+
+for (let elem of ['a', 'b'].values()) {
+  console.log(elem);
+}
+// 'a'
+// 'b'
+
+for (let [index, elem] of ['a', 'b'].entries()) {
+  console.log(index, elem);
+}
+// 0 "a"
+// 1 "b"
+```
+
+### 五：数组实例的 flat()，flatMap()
+
+1. 数组的成员有时还是数组，Array.prototype.flat()用于将嵌套的数组“拉平”，变成一维的数组。该方法返回一个新数组，对原数据没有影响。
+
+```
+[1, 2, [3, 4]].flat()
+// [1, 2, 3, 4]
+```
+
+2. flat()默认只会“拉平”一层，如果想要“拉平”多层的嵌套数组，可以将 flat()方法的参数写成一个整数，表示想要拉平的层数，默认为 1。
+
+```
+[1, 2, [3, [4, 5]]].flat()
+// [1, 2, 3, [4, 5]]
+
+[1, 2, [3, [4, 5]]].flat(2)
+// [1, 2, 3, 4, 5]
+```
+
+3. 如果不管有多少层嵌套，都要转成一维数组，可以用 Infinity 关键字作为参数。
+4. 如果原数组有空位，flat()方法会跳过空位。
+5. flatMap()方法对原数组的每个成员执行一个函数（相当于执行 Array.prototype.map()），然后对返回值组成的数组执行 flat()方法。该方法返回一个新数组，不改变原数组。
+
+```
+// 相当于 [[2, 4], [3, 6], [4, 8]].flat()
+[2, 3, 4].flatMap((x) => [x, x * 2])
+// [2, 4, 3, 6, 4, 8]
+```
+
+6. flatMap()只能展开一层数组。
+
+```
+// 相当于 [[[2]], [[4]], [[6]], [[8]]].flat()
+[1, 2, 3, 4].flatMap(x => [[x * 2]])
+// [[2], [4], [6], [8]]
+```
+
+上面代码中，遍历函数返回的是一个双层的数组，但是默认只能展开一层，因此 flatMap()返回的还是一个嵌套数组。
+
+### 六：数组的空位
+
+1. 数组的空位指，数组的某一个位置没有任何值。比如，Array 构造函数返回的数组都是空位。
+
+```
+Array(3) // [, , ,]
+```
+
+2. 注意，空位不是 undefined，一个位置的值等于 undefined，依然是有值的。空位是没有任何值，in 运算符可以说明这一点。
+
+```
+0 in [undefined, undefined, undefined] // true
+0 in [, , ,] // false
+```
+
+ES6 则是明确将空位转为 undefined。
