--- a/js/es6总结/6.对象的新增方法.md
+++ b/js/es6总结/6.对象的新增方法.md
@@ -53,3 +53,38 @@ Object.assign({b: 'c'},
 )
 // { b: 'c' }
 ```
+
+### 三： Object.getOwnPropertyDescriptors()
+
+1. 返回指定对象所有自身属性（非继承属性）的描述对象。
+
+该方法的引入目的，主要是为了解决 Object.assign()无法正确拷贝 get 属性和 set 属性的问题。
+
+```
+const source = {
+  set foo(value) {
+    console.log(value);
+  }
+};
+
+const target1 = {};
+Object.assign(target1, source);
+
+Object.getOwnPropertyDescriptor(target1, 'foo')
+// { value: undefined,
+//   writable: true,
+//   enumerable: true,
+//   configurable: true }
+```
+
+上面代码中，source 对象的 foo 属性的值是一个赋值函数，Object.assign 方法将这个属性拷贝给 target1 对象，结果该属性的值变成了 undefined。这是因为 Object.assign 方法总是拷贝一个属性的值，而不会拷贝它背后的赋值方法或取值方法。
+
+这时，Object.getOwnPropertyDescriptors()方法配合 Object.defineProperties()方法，就可以实现正确拷贝。
+
+### 四：Object.setPrototypeOf()（写操作）、Object.getPrototypeOf()（读操作）、Object.create()（生成操作）代替**proto**
+
+1. Object.setPrototypeOf 方法的作用与**proto**相同，用来设置一个对象的 prototype 对象，返回参数对象本身。它是 ES6 正式推荐的设置原型对象的方法。
+
+```
+
+```
