--- a/js/es6总结/6.对象的新增方法.md
+++ b/js/es6总结/6.对象的新增方法.md
@@ -86,5 +86,32 @@ Object.getOwnPropertyDescriptor(target1, 'foo')
 1. Object.setPrototypeOf 方法的作用与**proto**相同，用来设置一个对象的 prototype 对象，返回参数对象本身。它是 ES6 正式推荐的设置原型对象的方法。
 
 ```
+// 格式
+Object.setPrototypeOf(object, prototype)
 
+// 用法
+const o = Object.setPrototypeOf({}, null);
+
+//该方法等同于下面的函数
+function setPrototypeOf(obj, proto) {
+  obj.__proto__ = proto;
+  return obj;
+}
+```
+
+2. Object.getPrototypeOf()用于读取一个对象的原型对象
+
+```
+function Rectangle() {
+  // ...
+}
+
+const rec = new Rectangle();
+
+Object.getPrototypeOf(rec) === Rectangle.prototype
+// true
+
+Object.setPrototypeOf(rec, Object.prototype);
+Object.getPrototypeOf(rec) === Rectangle.prototype
+// false
 ```
