--- a/python/muke/python进阶/函数式编程.md
+++ b/python/muke/python进阶/函数式编程.md
@@ -198,3 +198,73 @@ f1, f2, f3 = count()
 ```
 
 因此，返回函数不要引用任何循环变量，或者后续会发生变化的变量。
+
+### 七：python 中闭包
+
+1. 关键字 lambda 表示匿名函数，冒号前面的 x 表示函数参数。
+
+```
+>>> map(lambda x: x * x, [1, 2, 3, 4, 5, 6, 7, 8, 9])
+[1, 4, 9, 16, 25, 36, 49, 64, 81]
+```
+
+通过对比可以看出，匿名函数 lambda x: x \* x 实际上就是：
+
+```
+def f(x):
+    return x * x
+```
+
+2. 匿名函数有个限制，就是只能有一个表达式，不写 return，返回值就是该表达式的结果。
+
+### 八：python 装饰器
+
+1. 定义一个函数，想在运行时动态增加功能，又不想改动函数本身的代码
+2. Python 的 decorator 本质上就是一个高阶函数，它接收一个函数作为参数，然后，返回一个新函数。
+
+考察一个@log 的定义：
+
+```
+def log(f):
+    def fn(x):
+        print 'call ' + f.__name__ + '()...'
+        return f(x)
+    return fn
+
+@log
+def factorial(n):
+    return reduce(lambda x,y: x*y, range(1, n+1))
+print factorial(10)
+```
+
+3. 要让 @log 自适应任何参数定义的函数，可以利用 Python 的 \*args 和 \*\*kw，保证任意个数的参数总是能正常调用：
+
+```
+def log(f):
+    def fn(*args, **kw):
+        print 'call ' + f.__name__ + '()...'
+        return f(*args, **kw)
+    return fn
+```
+
+**注意：**python 中在打印变量时要用%,s 代表的是字符串,fs 代表的是浮点数.%s 代表打印的变量是字符串,最后还要将变量名写到最后,格式为%(变量名)
+
+### 八. python 中编写带参数 decorator
+
+1. 如果有的函数非常重要，希望打印出'[INFO] call xxx()...'，有的函数不太重要，希望打印出'[DEBUG] call xxx()...'，这时，log 函数本身就需要传入'INFO'或'DEBUG'这样的参数，类似这样：
+
+```
+@log('DEBUG')
+def my_func():
+    pass
+```
+
+把上面的定义翻译成高阶函数的调用，就是：
+
+```
+my_func = log('DEBUG')(my_func)
+```
+
+### 九：python 中完善 decorator
+
+1.
