--- a/python/muke/python进阶/1.函数式编程.md
+++ b/python/muke/python进阶/1.函数式编程.md
@@ -267,4 +267,35 @@ my_func = log('DEBUG')(my_func)
 
 ### 九：python 中完善 decorator
 
-1.
+1. 如果要让调用者看不出一个函数经过了@decorator 的“改造”，就需要把原函数的一些属性复制到新函数中,Python 内置的 functools 可以用来自动化完成这个“复制”的任务：
+
+```
+import functools
+def log(f):
+    @functools.wraps(f)
+    def wrapper(*args, **kw):
+        print 'call...'
+        return f(*args, **kw)
+    return wrapper
+```
+
+### 十：python 中偏函数
+
+1. 当一个函数有很多参数时，调用者就需要提供多个参数。如果减少参数个数，就可以简化调用者的负担。
+2. functools.partial 就是帮助我们创建一个偏函数的，不需要我们自己定义 int2()，可以直接使用下面的代码创建一个新的函数 int2：
+
+```
+//原：
+def int2(x, base=2):
+    return int(x, base)
+
+//新:
+>>> import functools
+>>> int2 = functools.partial(int, base=2)
+>>> int2('1000000')
+64
+>>> int2('1010101')
+85
+```
+
+所以，functools.partial 可以把一个参数多的函数变成一个参数少的新函数，少的参数需要在创建时指定默认值，这样，新函数调用的难度就降低了。
