--- a/js/es6总结/9.promise.md
+++ b/js/es6总结/9.promise.md
@@ -189,3 +189,34 @@ p 的状态由 p1、p2、p3 决定，分成两种情况。
 （1）只有 p1、p2、p3 的状态都变成 fulfilled，p 的状态才会变成 fulfilled，此时 p1、p2、p3 的返回值组成一个数组，传递给 p 的回调函数。
 
 （2）只要 p1、p2、p3 之中有一个被 rejected，p 的状态就变成 rejected，此时第一个被 reject 的实例的返回值，会传递给 p 的回调函数。
+
+### 七：promise.race
+
+1. Promise.race 方法同样是将多个 Promise 实例，包装成一个新的 Promise 实例。
+
+```
+const p = Promise.race([p1, p2, p3]);
+```
+
+只要 p1、p2、p3 之中有一个实例率先改变状态，p 的状态就跟着改变。那个率先改变的 Promise 实例的返回值，就传递给 p 的回调函数。
+
+Promise.race 方法的参数与 Promise.all 方法一样，如果不是 Promise 实例，就会先调用下面讲到的 Promise.resolve 方法，将参数转为 Promise 实例，再进一步处理。
+
+下面是一个例子，如果指定时间内没有获得结果，就将 Promise 的状态变为 reject，否则变为 resolve。
+
+```
+const p = Promise.race([
+  fetch('/resource-that-may-take-a-while'),
+  new Promise(function (resolve, reject) {
+    setTimeout(() => reject(new Error('request timeout')), 5000)
+  })
+]);
+
+p
+.then(console.log)
+.catch(console.error);
+```
+
+### 八：Promise.resolve()
+
+1. 有时需要将现有对象转为 Promise 对象，Promise.resolve 方法就起到这个作用。
