--- a/js/es6总结/9.promise.md
+++ b/js/es6总结/9.promise.md
@@ -219,4 +219,110 @@ p
 
 ### 八：Promise.resolve()
 
-1. 有时需要将现有对象转为 Promise 对象，Promise.resolve 方法就起到这个作用。
+1. Promise.resolve 方法的参数分成四种情况。
+
+（1）参数是一个 Promise 实例
+
+如果参数是 Promise 实例，那么 Promise.resolve 将不做任何修改、原封不动地返回这个实例。
+
+（2）参数是一个 thenable 对象
+
+thenable 对象指的是具有 then 方法的对象，比如下面这个对象。
+
+```
+let thenable = {
+  then: function(resolve, reject) {
+    resolve(42);
+  }
+};
+```
+
+Promise.resolve 方法会将这个对象转为 Promise 对象，然后就立即执行 thenable 对象的 then 方法。
+
+```
+let thenable = {
+  then: function(resolve, reject) {
+    resolve(42);
+  }
+};
+
+let p1 = Promise.resolve(thenable);
+p1.then(function(value) {
+  console.log(value);  // 42
+});
+```
+
+上面代码中，thenable 对象的 then 方法执行后，对象 p1 的状态就变为 resolved，从而立即执行最后那个 then 方法指定的回调函数，输出 42。
+
+（3）参数不是具有 then 方法的对象，或根本就不是对象
+
+如果参数是一个原始值，或者是一个不具有 then 方法的对象，则 Promise.resolve 方法返回一个新的 Promise 对象，状态为 resolved。
+
+```
+const p = Promise.resolve('Hello');
+
+p.then(function (s){
+  console.log(s)
+});
+// Hello
+```
+
+上面代码生成一个新的 Promise 对象的实例 p。由于字符串 Hello 不属于异步操作（判断方法是字符串对象不具有 then 方法），返回 Promise 实例的状态从一生成就是 resolved，所以回调函数会立即执行。Promise.resolve 方法的参数，会同时传给回调函数。
+
+（4）不带有任何参数
+
+Promise.resolve 方法允许调用时不带参数，直接返回一个 resolved 状态的 Promise 对象。
+
+所以，如果希望得到一个 Promise 对象，比较方便的方法就是直接调用 Promise.resolve 方法。
+
+```
+const p = Promise.resolve();
+
+p.then(function () {
+  // ...
+});
+```
+
+需要注意的是，立即 resolve 的 Promise 对象，是在本轮“事件循环”（event loop）的结束时，而不是在下一轮“事件循环”的开始时。
+
+```
+setTimeout(function () {
+  console.log('three');
+}, 0);
+
+Promise.resolve().then(function () {
+  console.log('two');
+});
+
+console.log('one');
+
+// one
+// two
+// three
+```
+
+上面代码中，setTimeout(fn, 0)在下一轮“事件循环”开始时执行，Promise.resolve()在本轮“事件循环”结束时执行，console.log('one')则是立即执行，因此最先输出。
+
+### 九：Promise.reject()
+
+1. Promise.reject(reason)方法也会返回一个新的 Promise 实例，该实例的状态为 rejected。
+
+上面代码生成一个 Promise 对象的实例 p，状态为 rejected，回调函数会立即执行。
+
+注意，Promise.reject()方法的参数，会原封不动地作为 reject 的理由，变成后续方法的参数。这一点与 Promise.resolve 方法不一致。
+
+```
+const thenable = {
+  then(resolve, reject) {
+    reject('出错了');
+  }
+};
+
+Promise.reject(thenable)
+.catch(e => {
+  console.log(e === thenable)
+})
+// true
+```
+
+上面代码中，Promise.reject 方法的参数是一个 thenable 对象，执行以后，后面 catch 方法的参数不是 reject 抛出的“出错了”这个字符串，而是 thenable 对象。
